# husky-rs

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .rumdl.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  LICENSE.txt  Makefile  README.md  SECURITY.md  build.rs  cliff.toml  compose.yml
.agent/skills/conventional-commits/: SKILL.md
.agent/skills/husky-maintainer/: SKILL.md
.agent/skills/rust-expert/: SKILL.md
.agent/skills/senior-reviewer/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  coverage.yml  docker.yml  release.yml
.husky/: _helpers.sh  commit-msg  pre-commit  pre-push
.husky/_/: husky.sh
docs/: development.md  examples.md  troubleshooting.md  usage.md
scripts/: verify.sh
src/: lib.rs
tests/: test_advanced_scenarios.rs  test_cli.rs  test_examples.rs  test_helpers.rs  test_hooks.rs  test_husky.rs  test_installation.rs  test_integration.rs
tests/common/: mod.rs
