[package]
name = "husky-rs"
version = "0.1.5"
edition = "2021"
description = "husky for cargo"
authors = ["Mystic"]
repository = "https://github.com/pplmx/husky-rs"
homepage = "https://github.com/pplmx/husky-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
build = "build.rs"

[[bin]]
name = "husky"
path = "src/bin/husky.rs"
required-features = ["cli"]

[features]
default = []
cli = []
